---------------------------------------------------------------------------------------------------
Version: 1.5.0
Date: 2023-06-25
  Features:
    - Proper deconstruction in only where entities are built
    - Overfill mode uses more of external area reach
    - Improved Space Exploration SatView compatibility
  Bugfixes:
    - Fixed a bug in drill placement that caused suboptimal layouts in overfill mode
---------------------------------------------------------------------------------------------------
Version: 1.4.3
Date: 2023-04-02
  Bugfixes:
    - Fixed a crash when updating the mod from versions before 1.3.0
---------------------------------------------------------------------------------------------------
Version: 1.4.2
Date: 2023-03-28
  Bugfixes:
    - Fixed a crash when using Blueprint Sandboxes mod together with Space Exploration
---------------------------------------------------------------------------------------------------
Version: 1.4.1
Date: 2023-03-25
  Bugfixes:
    - Fixed a crash when launching custom scenarios
---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 2023-02-06
  Features:
    - Added a pipe type option. Pipes are placed automatically if resource requires a fluid.
    - Added an option to force pipe placement in advanced settings.
    - Added sound effects.
    - Updated icons for misc options.
    - Space Exploration compatibility when placing patches in space. Added space transport belt and scaffold type options.
  Optimizations:
    - Internal layout handler refactoring
---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2023-01-18
  Bugfixes:
    - Fixed a crash in Compact Logistics layout
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 2022-12-31
  Bugfixes: