@@ -18,7 +18,7 @@ blueprint_add_mode=Add blueprints
 show_non_electric_miners=Show non-electric miners
 force_pipe_placement=Force pipe placement
 print_placement_info=Print placement info
-display_lane_filling=Display lane filling\n(change display duration in mod settings)
+display_lane_filling=Display lane saturation\n(change display duration in mod settings)
 
 settings_layout_label=Layout type
 settings_direction_label=Layout direction
@@ -38,6 +38,7 @@ settings_layout_choice_super_compact=Super Compact
 settings_layout_choice_sparse=Sparse
 settings_layout_choice_logistics=Logistics
 settings_layout_choice_compact_logistics=Compact Logistics
+settings_layout_choice_sparse_logistics=Sparse Logistics
 settings_layout_choice_blueprints=Blueprints
 
 choice_none=None
