@@ -38,6 +38,7 @@ settings_layout_choice_super_compact=Super Kompaktiškas
 settings_layout_choice_sparse=Išsklaidytas
 settings_layout_choice_logistics=Logistinis
 settings_layout_choice_compact_logistics=Kompaktiškas Logistinis
+settings_layout_choice_sparse_logistics=Išsklaidytas Logistinis
 settings_layout_choice_blueprints=Brėžiniai
 
 choice_none=Niekas
