@@ -28,6 +28,8 @@ settings_layout_choice_super_compact=Супер Компактный
 settings_layout_choice_sparse=Редкий
 settings_layout_choice_logistics=Логистический
 settings_layout_choice_compact_logistics=Компактный Логистический
+settings_layout_choice_sparse_logistics=Редкий Логистический
+settings_layout_choice_blueprints=Чертёж
 
 choice_none=None
 choice_lamp=Разместите лампы
