@@ -28,6 +28,8 @@ settings_layout_choice_super_compact=Супер Компактний
 settings_layout_choice_sparse=Рідкісний
 settings_layout_choice_logistics=Логістичний
 settings_layout_choice_compact_logistics=Компактний Логістичний
+settings_layout_choice_sparse_logistics=Рідкісний Логістичний
+settings_layout_choice_blueprints=Креслення
 
 choice_none=Жодного
 choice_lamp=Розмістіть лампи
